# Rustix

./: .gitignore  Cargo.toml  LICENSE  README.md  dead.md  next_roadmap.md  patch.py  patch2.py  patch3.py  pendingtests.md  untested.md  warnings.md
apps/runtime/: Cargo.toml
apps/runtime/packaging/: rustix.desktop
apps/runtime/src/: app_state.rs  asset_cook.rs  asset_watcher.rs  audio_import.rs  breakout.rs  build_game.rs  camera.rs  camera_tests.rs  combat.rs  endless_runner.rs  enemy.rs  fonts.rs  gltf_loader.rs  init.rs  main.rs  model_import.rs  multi_scene_tests.rs  obj_loader.rs  platformer.rs  play_mode.rs  play_mode_tests.rs  player.rs  prefab.rs  project.rs  render.rs  render_tests.rs  scene.rs  scene_tests.rs  script_presets.rs  shadow_tests.rs  sprite_editor.rs  terrain.rs  tetris.rs  texture_import.rs  ui_renderer.rs  undo.rs  voxel.rs  waveform.rs
apps/runtime/src/init/: mod.rs  reload.rs  scene.rs  sprite_2d.rs
apps/runtime/src/render/: bloom.rs  debug_render.rs  deferred_graph.rs  forward_plus.rs  gbuffer.rs  gpu_culling.rs  hdr_graph.rs  instanced.rs  lighting.rs  oit.rs  overlay.rs  particle_system.rs  post_process.rs  scene.rs  shadow.rs  skybox.rs  ssao.rs  (+3 more)
crates/animation/: Cargo.toml
crates/animation/src/: ik.rs  ik_tests.rs  lib.rs  lib_tests.rs  skeleton.rs  skeleton_tests.rs  state_machine.rs  state_machine_tests.rs
crates/asset/: Cargo.toml
crates/asset/src/: animation.rs  animation_tests.rs  audio.rs  audio_tests.rs  cache.rs  cache_tests.rs  cook.rs  cook_tests.rs  decoder_pool.rs  decoder_pool_tests.rs  dependency_graph.rs  dependency_graph_tests.rs  font.rs  font_tests.rs  handle.rs  handle_tests.rs  hot_reload.rs  hot_reload_tests.rs  importer.rs  importer_tests.rs  lib.rs  load_state.rs  load_state_tests.rs  loader.rs  loader_tests.rs  material.rs  material_tests.rs  mesh.rs  mesh_opt.rs  mesh_opt_tests.rs  mesh_tests.rs  mmap.rs  mmap_tests.rs  physics.rs  physics_tests.rs  prefab.rs  prefab_tests.rs  region.rs  region_tests.rs  server.rs  (+13 more)
crates/audio/: Cargo.toml  TESTS.md
crates/audio/src/: decoder.rs  effects.rs  effects_tests.rs  engine.rs  engine_tests.rs  lib.rs  spatial.rs  spatial_tests.rs  stream.rs  stream_tests.rs  types.rs  types_tests.rs  waveform.rs  waveform_tests.rs
crates/audio/tests/: spatial_tests.rs
crates/core/: Cargo.toml
crates/core/src/: change_tracker.rs  change_tracker_tests.rs  command_buffer.rs  command_buffer_tests.rs  component_groups.rs  component_groups_tests.rs  component_registry.rs  component_registry_tests.rs  components.rs  components_tests.rs  config.rs  config_tests.rs  dev_toggles.rs  dev_toggles_tests.rs  diagnostics.rs  diagnostics_tests.rs  ecs.rs  ecs_tests.rs  gpu_staging.rs  gpu_staging_tests.rs  job.rs  job_tests.rs  lib.rs  log_capture.rs  math.rs  math_tests.rs  memory.rs  memory_tests.rs  memory_tracker.rs  memory_tracker_tests.rs  soa_storage.rs  soa_storage_tests.rs  system_monitor.rs  system_monitor_tests.rs  task_graph.rs  task_graph_tests.rs  task_priority.rs  task_priority_tests.rs  thread_local_arena.rs  thread_local_arena_tests.rs  (+6 more)
crates/editor/: Cargo.toml
crates/editor/src/: animation_editor.rs  animation_editor_tests.rs  asset_browser.rs  asset_browser_tests.rs  build_pipeline.rs  build_pipeline_tests.rs  camera.rs  camera_tests.rs  console.rs  console_tests.rs  hierarchy.rs  hierarchy_tests.rs  inspector.rs  inspector_tests.rs  lib.rs  lib_tests.rs  lighting_editor.rs  lighting_editor_tests.rs  material_editor.rs  material_editor_tests.rs  play_mode.rs  play_mode_tests.rs  plugin.rs  plugin_tests.rs  profiler.rs  profiler_tests.rs  terrain_editor.rs  terrain_editor_tests.rs  undo.rs  undo_tests.rs
crates/networking/: Cargo.toml
crates/networking/src/: authority.rs  bandwidth.rs  interpolation.rs  lag_compensation.rs  lib.rs  matchmaking.rs  matchmaking_tests.rs  nat.rs  nat_tests.rs  prediction.rs  prediction_tests.rs  protocol.rs  protocol_tests.rs  replication.rs  replication_tests.rs  serialize.rs  udp.rs  udp_tests.rs
crates/physics/: Cargo.toml
crates/physics/src/: lib.rs  lib_tests.rs  rapier.rs  rapier_tests.rs
crates/platform/: Cargo.toml
crates/platform/src/: actions.rs  actions_tests.rs  clipboard.rs  clipboard_tests.rs  gamepad.rs  gamepad_tests.rs  input.rs  input_tests.rs  lib.rs  lib_tests.rs  recorder.rs  recorder_tests.rs  window.rs  window_tests.rs
crates/render/: Cargo.toml  build.rs
crates/render/src/: bindless.rs  components.rs  components_tests.rs  debug_label.rs  debug_label_tests.rs  descriptor_allocator.rs  descriptor_batch.rs  descriptor_cache.rs  device.rs  error.rs  error_tests.rs  gi_tests.rs  gizmo.rs  gizmo_tests.rs  graph.rs  graph_tests.rs  hot_reload.rs  hot_reload_tests.rs  instance.rs  lib.rs  memory.rs  mesh.rs  mesh_tests.rs  msaa.rs  msaa_tests.rs  particle.rs  particle_gpu.rs  pbr.rs  pipeline.rs  pipeline_tests.rs  profiler.rs  renderdoc.rs  renderdoc_tests.rs  renderer.rs  renderer_tests.rs  sampler_cache.rs  sampler_cache_tests.rs  secondary_cmd.rs  sh.rs  shader.rs  (+15 more)
crates/scripting/: Cargo.toml
crates/scripting/src/: component_def.rs  coroutine.rs  coroutine_tests.rs  events.rs  hot_reload.rs  hot_reload_tests.rs  lib.rs  lib_tests.rs  logging.rs  logging_tests.rs  math_api.rs  sandbox.rs  sandbox_tests.rs  time_api.rs  time_api_tests.rs
crates/terrain/: Cargo.toml
crates/terrain/src/: chunk.rs  chunk_tests.rs  erosion.rs  erosion_tests.rs  foliage.rs  import.rs  lib.rs  lib_tests.rs  material.rs  noise.rs  noise_tests.rs  sculpt.rs  sculpt_tests.rs  splat.rs  water.rs  water_tests.rs
crates/ui/: Cargo.toml
crates/ui/src/: layout.rs  lib.rs  lib_tests.rs  text.rs
crates/world/: Cargo.toml
crates/world/src/: editor_meta.rs  editor_meta_tests.rs  lib.rs  lib_tests.rs  multi_scene.rs  multi_scene_tests.rs  save_load.rs  save_load_tests.rs  scene_graph.rs  scene_graph_tests.rs  serialization.rs  serialization_tests.rs  spatial.rs  spatial_tests.rs  time_of_day.rs  time_of_day_tests.rs  weather.rs  weather_tests.rs
engine/: Cargo.toml
engine/src/: app.rs  lib.rs  plugin.rs  schedule.rs
(+144 files in other folders)
