[package]
name = "rustix-runtime"
version.workspace = true
edition.workspace = true
description = "Rustix engine game runtime binary"

[dependencies]
tracing = { workspace = true }
winit = { workspace = true }
raw-window-handle = { workspace = true }
ash = { workspace = true }
gpu-allocator = { workspace = true }
bytemuck = { workspace = true }
hecs = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
rustix-core = { path = "../../crates/core" }
rustix-platform = { path = "../../crates/platform" }
rustix-render = { path = "../../crates/render" }
rustix-ui = { path = "../../crates/ui" }
gltf = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "6"
