[package]
name = "rustix-runtime"
version.workspace = true
edition.workspace = true
description = "Rustix engine game runtime binary"

[dependencies]
tracing = { workspace = true }
winit = { workspace = true }
raw-window-handle = { workspace = true }
ash = { workspace = true }
gpu-allocator = { workspace = true }
bytemuck = { workspace = true }
hecs = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
rustix-core = { path = "../../crates/core" }
rustix-platform = { path = "../../crates/platform" }
rustix-render = { path = "../../crates/render" }
rustix-ui = { path = "../../crates/ui" }
rustix-audio = { path = "../../crates/audio" }
rustix-animation = { path = "../../crates/animation" }
rustix-physics = { path = "../../crates/physics" }
rustix-scripting = { path = "../../crates/scripting" }
rustix-terrain = { path = "../../crates/terrain" }
rustix-world = { path = "../../crates/world" }
rustix-asset = { path = "../../crates/asset" }
gltf = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "6"
image = { workspace = true }
open = "5"

[package.metadata.deb]
name = "rustix-engine"
maintainer = "Rustix Team <dev@rustix.dev>"
copyright = "2025-2026, Rustix Team"
extended-description = "Rustix Engine game runtime and editor."
section = "games"
priority = "optional"
depends = "libvulkan1"
assets = [
    ["target/release/rustix-runtime", "usr/bin/rustix-engine", "755"],
    ["packaging/rustix.desktop", "usr/share/applications/rustix.desktop", "644"],
]

[package.metadata.rpm]
name = "rustix-engine"
summary = "Rustix Engine game runtime and editor"
license = "MIT OR Apache-2.0"
group = "Amusement/Games"
assets = [
    { source = "target/release/rustix-runtime", dest = "/usr/bin/rustix-engine", mode = "755" },
    { source = "packaging/rustix.desktop", dest = "/usr/share/applications/rustix.desktop", mode = "644" },
]
requires = "vulkan-loader"
