[package]
name = "rustix-animation"
version = "0.1.0"
edition = "2021"
description = "Rustix engine animation system"

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
hecs = { workspace = true }
rayon = "1.10"

rustix-core = { path = "../core" }
rustix-asset = { path = "../asset" }
