[package]
name = "rustix-asset"
version = "0.1.0"
edition = "2021"
description = "Rustix engine asset system: loading, streaming, hot-reload"

[dependencies]
tokio = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
ron = { workspace = true }
memmap2 = "0.9"

rustix-core = { path = "../core" }

[dev-dependencies]
tempfile = "3"
