[package]
name = "rustix-asset"
version = "0.1.0"
edition = "2021"
description = "Rustix engine asset system: loading, streaming, hot-reload"

[dependencies]
tokio = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
ron = { workspace = true }
memmap2 = "0.9"
futures = "0.3"

gltf = { workspace = true }
bytemuck = { workspace = true }
ktx2 = { workspace = true }
ctt = { workspace = true }
half = { workspace = true }
meshopt = { workspace = true }
naga = { version = "23", features = ["spv-out", "glsl-in", "wgsl-in"] }
symphonia = { workspace = true, features = ["wav", "flac", "vorbis"] }

rustix-core = { path = "../core" }

[dev-dependencies]
tempfile = "3"
