[package]
name = "rustix-editor"
version = "0.1.0"
edition = "2021"
description = "Rustix engine editor support crate"

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }

rustix-core = { path = "../core" }
rustix-render = { path = "../render" }
rustix-ui = { path = "../ui" }
