[package]
name = "rustix-networking"
version.workspace = true
edition.workspace = true
description = "Rustix engine networking: MMO-oriented QUIC transport"

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
bincode = "1.3"

rustix-core = { path = "../core" }
