[package]
name = "rustix-scripting"
version.workspace = true
edition.workspace = true
description = "Rustix engine scripting: Rhai scripting with ECS integration"

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
rhai = { version = "1.18", features = ["serde", "std"] }
serde = { workspace = true }
rustix-core = { path = "../core" }
rustix-asset = { path = "../asset" }
hecs = { workspace = true }