[package]
name = "rustix-ui"
version.workspace = true
edition.workspace = true
description = "Rustix engine UI: immediate mode game UI framework"

[dependencies]
ash = { workspace = true }
gpu-allocator = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
glam = { workspace = true }
fontdue = "0.9"

rustix-render = { path = "../render" }
rustix-asset = { path = "../asset" }
rustix-core = { path = "../core" }
