[package]
name = "rustix-world"
version = "0.1.0"
edition = "2021"
description = "Rustix engine world streaming: chunk management, LOD, persistence"

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
crossbeam = { workspace = true }
hecs = { workspace = true }

rustix-core = { path = "../core" }
rustix-asset = { path = "../asset" }
rustix-terrain = { path = "../terrain" }
